# podgpt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
podgpt/: .env.example  Home.py  chat.py  chat_view_model.py  ingestion.py
podgpt/components/: document_splitter.py  documents.py  embeddings.py  qa_model.py
podgpt/components/llm/: falcon7bllm.py  llm.py
podgpt/components/vector_store/: vectorstore.py
podgpt/pages/: Uploader.py
podgpt/utils/: file_manager.py
